--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,30 @@
 .banner {
     position: absolute;
-    height: 80%;
+    height: 100%;
     /* height: 153%; */
     background-image: url('assets/banner-background.png');
     background-size: 1920px;
     filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
     background-repeat: no-repeat;
 
+}
+
+.hover-down {
+    transition: 0.2s;
+}
+
+.hover-down:hover {
+    transform: translate(0, 10px);
+    cursor: pointer;
+}
+
+.hover-up {
+    transition: 0.3s;
+}
+
+.hover-up:hover {
+    transform: translate(0, -5px);
+    cursor: pointer;
 }
 
 :root {
