--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
 .banner {
+    /* position: absolute; */
+    height: 100%;
+    background-image: url('assets/decrypt landingtest-01.png');
+    background-size: 1920px;
+    /* filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5)); */
+    background-repeat: no-repeat;
+
+}
+
+.banner2 {
     position: absolute;
     height: 100%;
-    /* height: 153%; */
-    background-image: url('assets/banner-background.png');
-    background-size: 1920px;
-    filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
+    background-image: url('assets/what_is_decrypt_bg.png');
+    background-size:  1920px 1080px;
+    /* filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5)); */
     background-repeat: no-repeat;
 
 }
