--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 .banner {
     height: 100%;
-    background-image: url('assets/decrypt landingtest-01.png');
+    background-image: url('assets/banner-background.png');
     background-size: 1920px;
     background-repeat: no-repeat;
 }
 
 .banner2 {
-    position: absolute;
+    /* position: absolute; */
     height: 100%;
     background-image: url('assets/what_is_decrypt_bg.png');
     background-size:  1920px 1080px;
