--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .banner {
     height: 100%;
-    background-image: url('assets/banner-background.png');
+    background-image: url('assets/bg-decrypt-02.png');
     background-size: 1920px;
     background-repeat: no-repeat;
 }
