--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .banner {
     height: 100%;
-    background-image: url('assets/bg-decrypt-02.png');
-    background-size: 1920px;
+    background-image: url('assets/bg-decrypt-dark1-02.png');
+    background-size: 1800px;
     background-repeat: no-repeat;
 }
 
